** (nautilus:4549): CRITICAL **: 14:01:37.418: eel_timed_wait_stop: assertion 'wait != NULL' failed
Version-Release number of selected component (if applicable): nautilus-3.28.1-9.el8.x86_64
How reproducible: always
Steps to Reproduce: 1.Run nautilus 2.Right click on any file, choose properties 3.Close properties
Actual results: ** (nautilus:4549): CRITICAL **: 14:01:37.418: eel_timed_wait_stop: assertion 'wait != NULL' failed
Expected results: no critical msg
Additional info: I can provide stack traces if required