properties-window: Fix criticals when closing

The "eel_timed_wait_stop: assertion 'wait != NULL' failed" critical
is printed when closing the properties window since commit c8c2fab2.
This is an attempt to fix them.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/issues/1075